[package]
name = "radicle_registry_node"
authors = ["Anonymous"]
edition = "2018"
version = "0.1.0"

[dependencies]
derive_more = "0.15.0"
exit-future = "0.1.4"
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
log = "0.4.8"
parking_lot = "0.9.0"
tokio = "0.1.22"
trie-root = "0.15.2"

[dependencies.codec]
package = "parity-scale-codec"
version = "1.0.0"

[dependencies.ctrlc]
features = ["termination"]
version = "3.1.3"

[dependencies.radicle_registry_runtime]
path = "../runtime"

[dependencies.aura]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "sc-consensus-aura"

[dependencies.aura-primitives]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "sp-consensus-aura"

[dependencies.basic-authorship]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "sc-basic-authority"

[dependencies.inherents]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "sp-inherents"

[dependencies.network]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "sc-network"

[dependencies.primitives]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "sp-core"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"

[dependencies.sc-cli]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"

[dependencies.sc-client]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"

[dependencies.sc-executor]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"

[dependencies.sc-service]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"

[dependencies.txpool]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "sc-transaction-pool"

[dependencies.txpool-api]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "sp-transaction-pool"

[dependencies.sc-finality-grandpa]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "sc-finality-grandpa"

[dependencies.sp-finality-grandpa]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "sp-finality-grandpa"

[dependencies.consensus-common]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "sp-consensus"
