[package]
name = "radicle_registry_runtime"
authors = ["Anonymous"]
edition = "2018"
version = "0.1.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "pallet-grandpa/std",
    "serde",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "sp-version/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "frame-executive/std",
    "pallet-sudo/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-offchain/std",
    "sp-core/std",
    "sp-session/std",
    "sp-transaction-pool/std",
]

[dependencies.codec]
default-features = false
features = ["derive", "full"]
package = "parity-scale-codec"
version = "1.0.0"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dependencies.pallet-aura]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default-features = false

[dependencies.sp-consensus-aura]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default-features = false

[dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.sp-api]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.frame-executive]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "frame-executive"
default_features = false

[dependencies.sp-offchain]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default-features = false

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.pallet-randomness-collective-flip]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.sp-session]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default-features = false

[dependencies.sp-block-builder]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default-features = false

[dependencies.sp-transaction-pool]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default-features = false

[dependencies.sp-inherents]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default-features = false

[dependencies.pallet-sudo]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
package = "pallet-sudo"
default_features = false

[dependencies.frame-support]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.pallet-timestamp]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.pallet-transaction-payment]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.sp-version]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false

[dependencies.pallet-grandpa]
git = "https://github.com/paritytech/substrate"
rev = "9f4c7b788b047661de28e9a3fc750af877efc155"
default_features = false
package = "pallet-grandpa"

[build-dependencies]
substrate-wasm-builder-runner = "1.0.2"

[dev-dependencies]
futures = "0.1"
rand = "0.7.2"
radicle_registry_client = { path = "../client" }
